# pg_knowledge_discovery_ml

./: evaluation.py  experiments.ipynb  feature_exploration.ipynb  feature_exploration2.ipynb  korpus.tex  main.ipynb  numpy_rewrite.ipynb  polars_rewrite.ipynb  preprocessing.py  preprocessing_experiments.ipynb  preprocessor.ipynb  tokenized_train.json  viz.html  viz.ipynb
.ipynb_checkpoints/: preprocessor-checkpoint.ipynb
cpp_version/: main.cpp  vcpkg.json
lda/: experiments.ipynb  predicions.json  preprocessor.ipynb  tokenized_test.json  with_lib.ipynb  with_lib.py
lda/rust_rewrite/: Cargo.toml  new_train.json
lda/rust_rewrite/src/: main.rs
lda/rust_rewrite2/: Cargo.toml
lda/rust_rewrite2/src/: main.rs
naive_bayes/: AA_withpreprocessing.ipynb  readme.md
other/: Introduction to Topic Modeling.ipynb  LDA_from_scratch.ipynb
preprocessing_output/: preprocessed_test_C.json  preprocessed_test_CSP.json  preprocessed_test_CSPH1e-4.json  preprocessed_test_CSPH1e-5.json  preprocessed_test_CSPH5e-4.json  preprocessed_test_CSPH5e-5.json  preprocessed_test_L.json  preprocessed_test_W.json  preprocessed_test_WPH1e-4.json  preprocessed_test_WSP.json  preprocessed_test_WSPH1e-5.json  preprocessed_test_WSPH5e-4.json  preprocessed_test_WSPH5e-5.json  preprocessed_test_empty.json  preprocessed_train_C.json  preprocessed_train_CSPH5e-4.json  preprocessed_train_SP.json  preprocessed_train_SPHC_1e-4.json  preprocessed_train_SPH_1e-4.json  preprocessed_train_W.json  preprocessed_train_WL.json  preprocessed_train_WSPH1e-5.json  preprocessed_train_WSPH5e-4.json  (+2 more)
(+40 files in other folders)
