[package]
name = "rust_rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
ouroboros = "0.15.6"
rand = "0.8.5"
rand_xorshift = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.93"

[profile.release]
debug = 1
