[package]
name = "rust_rewrite2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xorshift = "0.3.0"
serde = {version="1.0.152", features = ["derive"]}
serde_json = "1.0.93"

[profile.release]
debug = 1